[gd_scene load_steps=15 format=3 uid="uid://6nrx3gn8vdr3"]

[ext_resource type="Script" path="res://Utilities/Menus/hub_menu.gd" id="1_3ssx7"]
[ext_resource type="Texture2D" uid="uid://b3m4h3bnds4o4" path="res://Assets/Art/Shikashi's Fantasy Icons Pack v2/#1 - Transparent Icons.png" id="1_r02jd"]
[ext_resource type="StyleBox" uid="uid://c4axf6gnry0wi" path="res://Utilities/Menus/button_style.tres" id="2_otr56"]
[ext_resource type="PackedScene" uid="uid://bp0gw7kcfe8n3" path="res://Utilities/Crafting/crafting_menu.tscn" id="3_yyee7"]
[ext_resource type="PackedScene" uid="uid://dw7jp8bpq3h0m" path="res://Utilities/Inventory/inventory_interface.tscn" id="4_2da2w"]
[ext_resource type="Texture2D" uid="uid://n4ajdqxpoy37" path="res://Utilities/Menus/Art/Dusk's UI Icons.png" id="6_7sq6s"]
[ext_resource type="PackedScene" uid="uid://bxeoaa7gwg4w" path="res://Utilities/Menus/generic_menu.tscn" id="6_j061h"]
[ext_resource type="Resource" uid="uid://dech0h7erilx5" path="res://Utilities/Building/Tiles/dirt_tile.tres" id="7_fxp40"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nm7tg"]
atlas = ExtResource("1_r02jd")
region = Rect2(288, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2i8g"]
atlas = ExtResource("1_r02jd")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rb0p"]
atlas = ExtResource("1_r02jd")
region = Rect2(32, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5wa0"]
atlas = ExtResource("6_7sq6s")
region = Rect2(0, 0, 24, 24)
margin = Rect2(4, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5w8e"]
atlas = ExtResource("6_7sq6s")
region = Rect2(168, 0, 24, 24)
margin = Rect2(4, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3prao"]
atlas = ExtResource("6_7sq6s")
region = Rect2(96, 0, 24, 24)
margin = Rect2(4, 4, 8, 8)

[node name="HubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3ssx7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainerLeft" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="InventoryButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_nm7tg")

[node name="CraftingButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_y2i8g")

[node name="BuildingButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_4rb0p")
icon_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="InventoryInterface" parent="PanelContainer/MarginContainer/HBoxContainer/PanelContainer" instance=ExtResource("4_2da2w")]
visible = false
layout_mode = 2

[node name="CraftingMenu" parent="PanelContainer/MarginContainer/HBoxContainer/PanelContainer" instance=ExtResource("3_yyee7")]
visible = false
layout_mode = 2

[node name="BuildingMenu2" parent="PanelContainer/MarginContainer/HBoxContainer/PanelContainer" instance=ExtResource("6_j061h")]
visible = false
layout_mode = 2
slot_datas = Array[Resource]([ExtResource("7_fxp40")])

[node name="VBoxContainerRight" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_x5wa0")
icon_alignment = 2

[node name="AudioButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_w5w8e")
icon_alignment = 2

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("2_otr56")
theme_override_styles/pressed = ExtResource("2_otr56")
toggle_mode = true
icon = SubResource("AtlasTexture_3prao")
icon_alignment = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft/CraftingButton" to="." method="_on_crafting_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerLeft/BuildingButton" to="." method="_on_building_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainerRight/SettingsButton" to="." method="_on_settings_button_pressed"]
